# rust_ev_crypto_primitives

./: Cargo.toml  LICENSE.md  README.md
benches/: byte_array.rs  elgamal.rs  hashing.rs  integer.rs  number_theory.rs  zero_knowledge_proofs.rs
src/: alphabets.rs  argon2.rs  byte_array.rs  direct_trust.rs  domain.rs  elgamal.rs  hashing.rs  integer.rs  lib.rs  num_bigint.rs  number_theory.rs  random.rs  shared_error.rs  signature.rs  string.rs  symmetric_authenticated_encryption.rs  symmetric_autheticated_encryption.rs  zero_knowledge_proof.rs
src/basic_crypto_functions/: aes.rs  argon2.rs  certificate.rs  hash.rs  mod.rs  rand.rs  signature.rs
src/elgamal/: ciphertext.rs  combined_public_keys.rs  dercryption.rs  encryption_parameters.rs  mod.rs
src/mix_net/: commitments.rs  matrix.rs  mod.rs  shuffle.rs
src/mix_net/arguments/: hadamard_argument.rs  mod.rs  multi_exponentiation_argument.rs  product_argument.rs  shuffle_argument.rs  single_value_product_argument.rs  zero_argument.rs
src/openssl_wrapper/: certificate.rs  hash.rs  mod.rs  signature.rs
src/zero_knowledge_proofs/: decryption.rs  exponentiation.rs  mod.rs  plaintext_equality.rs  schnorr_proofs.rs
test_data/elgamal/: get-ciphertext-product.json  get-ciphertext.json  get-encryption-parameters.json
test_data/mixnet/: bilinearMap.json  get-verifiable-commitment-key.json  verify-hadamard-argument.json  verify-multiexp-argument.json  verify-product-argument.json  verify-shuffle-argument.json  verify-single-value-product-argument.json  verify-zero-argument.json
test_data/symmetric/: gen-ciphertext-symmetric.json  get-plaintext-symmetric.json
test_data/zeroknowledgeproofs/: verify-decryption.json  verify-exponentiation.json  verify-plaintext-equality.json  verify-schnorr.json
