[package]
name = "rust_ev_crypto_primitives"
description = "Crypto Primitives necessary for E-Voting Applications."
authors = ["Denis Morel"]
version = "0.7.0"
edition = "2021"
rust-version = "1.81"
license = "LGPL-3.0+"
repository = "https://github.com/de-mo/rust_ev_crypto_primitives"
readme = "README.md"
categories = ["cryptography", "mathematics"]
keywords = ["math", "e-voting", "crypto"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4"
thiserror = "1.0"
data-encoding = "2.5"
num-traits = "0.2"
argon2 = "0.5"
rug = { version = "1" }
rug-miller-rabin = { version = "0.1" }
lazy_static = "1"

# Dev dpendencies
[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
checks = []
