[package]
name = "rust_ev_crypto_primitives"
description = "Crypto Primitives necessary for E-Voting Applications."
authors = ["Denis Morel"]
version = "0.6.4"
edition = "2021"
rust-version = "1.83"
license = "LGPL-3.0+"
repository = "https://github.com/de-mo/rust_ev_crypto_primitives"
readme = "README.md"
categories = ["cryptography", "mathematics"]
keywords = ["math", "e-voting", "crypto"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "2"
data-encoding = "2.5"
num-traits = "0.2"
argon2 = "0.5"
rug = { version = "1" }
rug-miller-rabin = { version = "0.1" }
lazy_static = "1"
rug-gmpmee = { version = "0.1", optional = true }
tracing = "0.1"

# Dev dpendencies
[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rug = { version = "1", features = ["rand"] }
criterion = "0.5"

[features]
default = []
checks = []
gmpmee = ["dep:rug-gmpmee"]

[[bench]]
name = "number_theory"
harness = false

[[bench]]
name = "byte_array"
harness = false

[[bench]]
name = "elgamal"
harness = false
required-features = ["gmpmee"]

[[bench]]
name = "hashing"
harness = false

[[bench]]
name = "zero_knowledge_proofs"
harness = false
required-features = ["gmpmee"]
